FIX: hero overflow

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   }
 
   .hero {
-    font-size: 5rem;
+    font-size: 4rem;
   }
 
   .letter-spacing-xs {
